--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,9 @@ header, footer {
 label, button {
   margin: 20px 0px 20px 0px;
 }
+
+.pink {
+  background-color: pink;
+  padding: 20px;
+  display: none;
+}
